grid5000 script from external client